edition = "2023";

package trippy.v1;

import "google/api/field_behavior.proto";
import "google/protobuf/go_features.proto";

option go_package = "github.com/tzrikka/trippy/protos/v1";
option features.(pb.go).api_level = API_OPAQUE;

message OAuthConfig {
    string auth_url = 1 [(google.api.field_behavior) = REQUIRED];
    reserved 2; // Device auth URL.
    string token_url = 3 [(google.api.field_behavior) = REQUIRED];
    int64 auth_style = 4;

    string client_id = 5 [(google.api.field_behavior) = REQUIRED];
    string client_secret = 6 [(google.api.field_behavior) = REQUIRED];
    reserved 7; // Redirect URL.

    repeated string scopes = 8;

    map<string, string> auth_codes = 9;
}

// OAuthToken is based on https://pkg.go.dev/golang.org/x/oauth2#Token
message OAuthToken {
	string access_token = 1 [json_name = "access_token"];;
    string expiry = 2; // RFC-3339: "2006-01-02T15:04:05Z".
    string refresh_token = 3 [json_name = "refresh_token"];
    string token_type = 4 [json_name = "token_type"];
}
